# lab-recorder-python

./: .gitignore  main.py  pyproject.toml  setup.py
labrecorder/: cfg_loader.py  recorder.py
labrecorder/utils/: config.py
